force-app/main/default/objects/Integration_Credential__mdt/fields/Add_Payload_as_URL_Param__c.field-meta.xml
<CustomField>
    <fullName>Add_Payload_as_URL_Param__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Payload as URL Param</label>
    <type>Checkbox</type>
</CustomField>