force-app/main/default/objects/Integration_Credential__mdt/fields/client_ID__c.field-meta.xml
<CustomField>
    <fullName>client_ID__c</fullName>
    <label>client_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>