force-app/main/default/objects/Integration_Credential__mdt/fields/HeaderMap__c.field-meta.xml
<CustomField>
    <fullName>HeaderMap__c</fullName>
    <description>header key value compbinaitons for integration request
example= key:value</description>
    <inlineHelpText>header key value compbinaitons for integration request
example= key:value</inlineHelpText>
    <label>HeaderMap</label>
    <type>TextArea</type>
</CustomField>