force-app/main/default/objects/Integration_Credential__mdt/fields/Integration_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Integration_Authorization__c</fullName>
    <label>Integration Authorization</label>
    <referenceTo>Integration_Authorization__mdt</referenceTo>
    <relationshipLabel>Integration Credentials</relationshipLabel>
    <relationshipName>Integration_Credentials</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>