force-app/main/default/objects/Integration_Credential__mdt/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kafka</fullName>
            </value>
            <value>
                <fullName>NBS</fullName>
                <isActive>false</isActive>
                <label>NBS</label>
            </value>
            <value>
                <fullName>Netcore</fullName>
                <isActive>false</isActive>
                <label>Netcore</label>
            </value>
            <value>
                <fullName>Signzy</fullName>
                <isActive>false</isActive>
                <label>Signzy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>