force-app/main/default/objects/Integration_Credential__mdt/listViews/Topics.listView-meta.xml
<ListView>
    <fullName>Topics</fullName>
    <columns>isActive__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Http_Method__c</columns>
    <columns>Endpoint__c</columns>
    <columns>Add_Payload_as_URL_Param__c</columns>
    <filterScope>Everything</filterScope>
    <label>Topics</label>
</ListView>